Fixed alignemnet

--- a/sass/_sponsors.scss
+++ b/sass/_sponsors.scss
@@ -62,15 +62,14 @@
   }
 }
 
-
 .sponsor-placeholder {
   position: relative;
   margin-left: auto;
   margin-right: auto;
   min-width: 260px;
-  max-width: 380px;
+  max-width: 340px;
   height: 120px;
-  margin-bottom: 2em;
+  margin-bottom: 3em;
 
   p {
     font-size: 0.9em;
